# Clang-Compiler-Frontend-Packt

./: README.md  cleanup.sh
chapter1/: mainbroken.cpp
chapter1/syntaxcheck/: CMakeLists.txt  SyntaxCheck.cpp  build.sh
chapter10/pch/: Makefile  header.h  header1.h  header2.h  main.cpp
chapter10/pch/simple/: Makefile  header2.h  main.cpp
chapter10/pcm/: Makefile  fib_constexpr.h  fib_template.h  header1.h  header2.h  header3.h  main.cpp  module.modulemap
chapter10/pcm/explicit/: Makefile  main.cpp  module.modulemap
chapter10/pcm/implicit/: Makefile  header1.h  header2.h
chapter10/pcm/nontrivial/: Makefile  header1.h  header2.h  main.cpp  module.modulemap
chapter2/: annotation.cpp  annotation.cpp~  atokens.cpp  max.bc  max.ll  max_invalid_sema.cpp  max_invalid_syntax.cpp  maxns.cpp  redeclaration.cpp  types.hpp
chapter3/: max.cpp  maxerr.cpp  minmax.cpp  minmaxerr.cpp
chapter3/declvisitor/: CMakeLists.txt  Consumer.hpp  DeclVisitor.cpp  FrontendAction.hpp  Visitor.hpp  build.sh
chapter3/matchvisitor/: CMakeLists.txt  MatchCallback.hpp  MatchVisitor.cpp  build.sh
chapter3/recursivevisitor/: Consumer.hpp  FrontendAction.hpp  RecursiveVisitor.cpp  Visitor.hpp  cleanup.sh
chapter4/baselibs/: BaseLibs.cpp  CMakeLists.txt  CommonHeaders.h  TestCast.h  TestString.h  TestVector.h
chapter4/classcomplexity/: CMakeLists.txt  ClassAction.hpp  ClassChecker.cpp  ClassComplexityDiag.td  ClassConsumer.hpp  ClassVisitor.hpp  build.sh  run.sh  test.cpp
chapter4/classcomplexity/test/: lit.cfg.py  lit.site.cfg.py.in  simple_test.cpp
chapter4/diag/: CMakeLists.txt  Diags.cpp
chapter4/recursivevisitor/: CMakeLists.txt  Consumer.hpp  FrontendAction.hpp  Visitor.hpp  build.sh  functions.hpp
chapter5/: error.cpp  loop-convert.cpp  loop-convert_fixed.cpp  noerror.cpp  owning-memory.cpp
chapter5/classchecker/: ClasscheckerCheck.cpp  ClasscheckerCheck.h  ClasscheckerCheckNoImplicit.cpp  MiscTidyModule.cpp  classchecker.cpp
chapter6/: cfgexample.cpp
chapter6/cyclomaticcomplexity/: CyclomaticcomplexityCheck.cpp  CyclomaticcomplexityCheck.h
chapter7/: TestClass.cpp  TestClassMod.cpp  TestClassSmall.cpp  TestClassSmallFixedFormated.cpp  TestClassSmallFixedNonFormated.cpp  TestClassSmallFormated.cpp  a.out  fixes.yaml  foo.cpp  test.cpp
chapter7/clangformat/: main_formated.cpp  main_not_formated.cpp
chapter7/methodrename/: CMakeLists.txt  Consumer.hpp  FrontendAction.hpp  MethodRename.cpp  Visitor.hpp
chapter7/methodrenamecheck/: MethodrenameCheck.cpp  MethodrenameCheck.h
chapter8/: clangd.sh  foo.hpp
